--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Google tag (gtag.js) -->
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-P9JGLNBP');</script>
+  <!-- End Google Tag Manager -->
+
+        <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-SZB28486SR"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -10,12 +21,21 @@
 
   gtag('config', 'G-SZB28486SR');
 </script>
-    <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>HeadHunting Agency</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta name="description" content="Looking for top talent? Our HR agency specializes in headhunting, recruitment, and staffing solutions. Connect with us to find the perfect candidates for your business needs. Contact us today!">
+  <meta name="keywords" content="HR agency, Human Resources, headhunting, recruitment, staffing solutions, talent acquisition, executive search, employment agency, hiring services, job placement, workforce solutions, recruitment firm">
+    <!-- Open Graph Meta Tags for Facebook and LinkedIn -->
+    <meta property="og:title" content="HeadHunting Agency">
+    <meta property="og:description" content="Specializing in headhunting, recruitment, and staffing solutions. Connect with us to find the perfect candidates for your business needs.">
+    <meta property="og:image" content="./assets/img/hha-logo.png">
+    <meta property="og:url" content="https://hha.ro">
+    
+    <!-- Links to Social Media Profiles -->
+    <link rel="me" href="https://www.linkedin.com/showcase/headhuntingagency/about/">
+    <link rel="me" href="https://www.facebook.com/profile.php?id=100093103434674">
+    <link rel="me" href="https://www.instagram.com/headhuntingagency/">
+  
   <base href="/" />
   
 
@@ -46,6 +66,11 @@
   <link href="assets/css/style.css" rel="stylesheet">
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P9JGLNBP"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script src="assets/vendor/aos/aos.js"></script>
