--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,9 @@
   gtag('config', 'G-SZB28486SR');
 </script>
 
-  <title>HeadHunting Agency</title>
-  <meta name="description" content="Looking for top talent? Our HR agency specializes in headhunting, recruitment, and staffing solutions. Connect with us to find the perfect candidates for your business needs. Contact us today!">
-  <meta name="keywords" content="HR agency, Human Resources, headhunting, recruitment, staffing solutions, talent acquisition, executive search, employment agency, hiring services, job placement, workforce solutions, recruitment firm">
+  <title>HeadHunting Agency: Professional Career Services</title>
+  <meta name="description" content="Looking for top talent? Our HR agency specializes in headhunting, recruitment, remote jobs and staffing solutions. Connect with us to find the perfect candidates for your business needs. Contact us today!">
+  <meta name="keywords" content="HR agency, Executive Search Romania,Human Resources, headhunting, recruitment, staffing solutions, talent acquisition, executive search, employment agency, hiring services, job placement, workforce solutions, recruitment firm">
     <!-- Open Graph Meta Tags for Facebook and LinkedIn -->
     <meta property="og:title" content="HeadHunting Agency">
     <meta property="og:description" content="Specializing in headhunting, recruitment, and staffing solutions. Connect with us to find the perfect candidates for your business needs.">
