--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,11 @@
 </script>
 
   <title>HeadHunting Agency: Professional Career Services</title>
-  <meta name="description" content="Looking for top talent? Our HR agency specializes in headhunting, recruitment, remote jobs and staffing solutions. Connect with us to find the perfect candidates for your business needs. Contact us today!">
-  <meta name="keywords" content="HR agency, Executive Search Romania,Human Resources, headhunting, recruitment, staffing solutions, talent acquisition, executive search, employment agency, hiring services, job placement, workforce solutions, recruitment firm">
+  <meta name="description" content="Looking for top talent? Our HR agency specializes in headhunting, executive search, recruitment, remote jobs and staffing solutions. Connect with us to find the perfect candidates for your business needs. Contact us today!">
+  <meta name="keywords" content="HR agency, Executive Search Romania, executive search, Human Resources, headhunting, recruitment, staffing solutions, talent acquisition, executive search, employment agency, hiring services, job placement, workforce solutions, recruitment firm">
     <!-- Open Graph Meta Tags for Facebook and LinkedIn -->
     <meta property="og:title" content="HeadHunting Agency">
-    <meta property="og:description" content="Specializing in headhunting, recruitment, and staffing solutions. Connect with us to find the perfect candidates for your business needs.">
+    <meta property="og:description" content="Specializing in headhunting, executive search, recruitment, and staffing solutions. Connect with us to find the perfect candidates for your business needs.">
     <meta property="og:image" content="./assets/img/hha-logo.png">
     <meta property="og:url" content="https://hha.ro">
     
